[package]
name = "goxlr-scribble-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.0"
imageproc = "0.22.0"

goxlr-usb = { git = "https://github.com/GoXLR-on-Linux/GoXLR-Utility.git", package="goxlr-usb" }
